[gd_scene load_steps=12 format=3 uid="uid://bubvm5x777jj"]

[ext_resource type="Script" path="res://Scripts/Buttons/Main Menu/MainMenu.gd" id="1_u3gp0"]
[ext_resource type="Shader" path="res://Shaders/Outline.gdshader" id="2_l8tju"]
[ext_resource type="PackedScene" uid="uid://p6nwsjm680cj" path="res://Scenes/Menu/PauseButton.tscn" id="2_vqv21"]
[ext_resource type="Texture2D" uid="uid://bnsuhswfnwdne" path="res://Backgrounds/MainMenu.png" id="3_ilayh"]
[ext_resource type="PackedScene" uid="uid://5y2g2ausvo3t" path="res://Scenes/Menu/MainMenuBG.tscn" id="4_gig4d"]
[ext_resource type="AudioStream" uid="uid://b8hf58va3sd8i" path="res://Audio/Music/MenuTheme1.wav" id="5_26wv0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aty1y"]
shader = ExtResource("2_l8tju")

[sub_resource type="SystemFont" id="SystemFont_12o52"]

[sub_resource type="LabelSettings" id="LabelSettings_f8yai"]
font = SubResource("SystemFont_12o52")
font_size = 30

[sub_resource type="Animation" id="Animation_o67wy"]
resource_name = "BG"
length = 3.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ro1ch"]
_data = {
"BG": SubResource("Animation_o67wy")
}

[node name="MainMenu" type="Node"]
script = ExtResource("1_u3gp0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 324)
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/CenterContainer"]
texture_filter = 1
material = SubResource("ShaderMaterial_aty1y")
layout_mode = 2
text = "Dreams of electric beans"
label_settings = SubResource("LabelSettings_f8yai")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 324)
layout_mode = 2

[node name="NewGame" parent="VBoxContainer/Buttons" instance=ExtResource("2_vqv21")]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../LoadGame")
text = "New Game"

[node name="LoadGame" parent="VBoxContainer/Buttons" instance=ExtResource("2_vqv21")]
layout_mode = 2
focus_neighbor_top = NodePath("../NewGame")
focus_neighbor_bottom = NodePath("../Quit")
text = "Load game"
arrow_margin = 65

[node name="Quit" parent="VBoxContainer/Buttons" instance=ExtResource("2_vqv21")]
layout_mode = 2
focus_neighbor_top = NodePath("../LoadGame")
focus_neighbor_bottom = NodePath("../NewGame")
text = "Quit"
arrow_margin = 40

[node name="MainMenu" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_ilayh")

[node name="MainMenuBg" parent="." instance=ExtResource("4_gig4d")]
z_index = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ro1ch")
}
autoplay = "BG"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_26wv0")
autoplay = true

[connection signal="pressed" from="VBoxContainer/Buttons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
